Grace/tests/gibbs/errors/t292.grace
// ERROR = P1018
var a := 42
print("6*9 = ", a :. )
